# gemini-nano-banana-discord-bot

./: .dockerignore  .env.example  .git_commit_msg.txt  .gitignore  .pre-commit-config.yaml  .py_compile_check.py  .show_ws_queue.py  .show_ws_queue_ascii.py  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVLOG.md  Dockerfile  ENV_SETUP.md  LICENSE  README.md  README_OLD2.md  SECURITY.md  SELF_HOSTING.md  dashboarddev.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  setup_env.py  test_audit.py
data/: settings.json
docs/: examples.md  nginx.conf
src/: __init__.py  bot.py  health_check.py
src/admin/: auth.py  middleware.py  router.py  schemas.py
src/admin/templates/: audit.html  dashboard.html  rate-limits.html  secrets.html  settings.html  status.html  template_base.html
src/commands/: blend.py  edit.py  help.py  imagine.py  info.py
src/commands/utils/: __init__.py  error_handler.py  images.py  logging.py  openrouter.py  queue.py  rate_limiter.py  storage.py  styles.py  validators.py
src/utils/: audit_logger.py  config.py  preferences.py  settings_store.py
tests/: conftest.py  test_admin_auth.py  test_admin_e2e.py  test_admin_router.py  test_audit_logger.py  test_commands.py  test_middleware.py  test_openrouter.py  test_settings_store.py
