[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-nano-banana-discord-bot"
version = "0.1.0"
description = "gemini-nano-banana-discord-bot — a Discord bot that generates, edits, and blends images via OpenRouter/Gemini models."
urls = { "Repository" = "https://github.com/mojomast/gemini-nano-banana-discord-bot" }
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "discord.py==2.3.2",
    "httpx==0.25.2",
    "python-dotenv==1.0.0",
    "pydantic==2.8.0",
    "Pillow==10.0.1",
    "aiofiles==24.1.0",
    "requests==2.32.0",
    "uvicorn[standard]==0.30.0",
    "fastapi==0.115.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
[project.optional-dependencies]
dev = [
    "pyright==1.1.378",
    "pytest==8.0.0",
    "pytest-asyncio==0.23.0"
]
[project.scripts]
gemini-nano-banana-discord-bot = "src.bot:main"

[tool.setuptools.packages.find]
where = ["."]
